Avoid layout shift..

--- a/css/schwermetallband.css
+++ b/css/schwermetallband.css
@@ -131,8 +131,6 @@ img.bandlogo {
 	display: inline-block;
 }
 #epfg {
-	width: 351px;
-	height: 346px;
 	object-fit: contain;
 }
 .songs {
